<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_entries_label">Entries</string>
    <string name="dream_fulfilled_label">Fulfilled</string>
    <string name="dream_deferred_label">Deferred</string>
    <string name="dream_item_title">Dream Title</string>
    <string name="dream_item_date">Dream Date</string>
    <string name="handcuffs">handcuffs</string>
    <string name="share_dream">share_dream</string>
    <string name="take_dream_photo">take_dream_photo</string>
</resources>