<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dream_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DreamDetailFragment">

    <TextView
        android:id="@+id/dream_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dream_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/dream_title_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/dream_title_label"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/dream_fulfilled_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dream_fulfilled_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/dream_deferred_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dream_deferred_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toEndOf="@+id/dream_fulfilled_checkbox"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <TextView
        android:id="@+id/dream_entries_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/dream_entries_label"
        app:layout_constraintStart_toStartOf="@+id/dream_title_text"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_text" />

    <Button
        android:id="@+id/dream_entry_0_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dream_fulfilled_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/dream_fulfilled_checkbox"
        tools:text="CONCEIVED" />

    <Button
        android:id="@+id/dream_entry_1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dream_entry_0_button"
        app:layout_constraintTop_toBottomOf="@+id/dream_entry_0_button"
        tools:text="Feb 28, 2022: Dream Entry 2A" />

    <Button
        android:id="@+id/dream_entry_2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dream_entry_1_button"
        app:layout_constraintTop_toBottomOf="@+id/dream_entry_1_button"
        tools:text="Feb 28, 2022: Dream Entry 2B" />

    <Button
        android:id="@+id/dream_entry_3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dream_entry_2_button"
        app:layout_constraintTop_toBottomOf="@+id/dream_entry_2_button"
        tools:text="FULFILLED" />

    <Button
        android:id="@+id/dream_entry_4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/dream_entry_3_button"
        app:layout_constraintTop_toBottomOf="@+id/dream_entry_3_button"
        tools:text="DEFERRED" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add" />


</LinearLayout>